@@ -12,4 +12,7 @@
   optional pkgcompress, and finally `pkgadd lfs'.  Maybe a final run of Gerard's
   `check-lfs' to give people a warm fuzzy feeling.
 
-* we're not keeping track of installed patches. Try to find a solution.
+* re-create /usr/share/info/dir and whatis database before installing and after
+  removing a package.
+
+* make libprometheus aware of the changes wrt rerootd
