@@ -16,9 +16,12 @@ line.  If so desired, it also creates a backup of the removed package.
 
 .B pkgrm
 uses the
-.BR install-log "(1) log files to determine which files have to be deleted. 
+.BR rerootd "(1) index files to determine which files have to be deleted."
 It also creates a list of used directories and deletes them if they have
 become empty.
+
+Note that only files created at install time can be deleted.  Files that have
+been created subsequently will be left behind and have to be removed manually.
 
 By default,
 .B pkgrm
@@ -27,6 +30,11 @@ a backup.  If other installed packages depend on the one to remove, another
 confirmation is required.  These prompts can be skipped using the
 .I --force
 parameter.
+
+Also by default,
+.B pkgrm
+will not remove files installed in
+.IR /etc " or " /var ", unless the " --purge " flag is specified."
 
 .SH OPTIONS
 
@@ -52,13 +60,21 @@ OPTION IS USED AS WELL.
 .BR -b ", " --backup
 .RS
 Create a backup of the package before removing it.  The backup will be created
-in the directory specified by the
-.I backupdir
-directive in
-.BR prometheus.conf "(5).  Any previous backups will be overwritten.  The
-backup will be a
-.BR bzip2 "(1)-compressed tarball named after the short name of the package
-and the string .pkg.tar.bz2 appended, e.g. `bash.pkg.tar.bz2'.
+.RI "in " ~prometheus/backup " and contain all those files that will be"
+removed. This means the contents of the backup will change depending upon
+.RI "whether the " --purge " flag (see below) was specified or not.  Any"
+previous backups will be overwritten.  The backup will be a
+.BR bzip2 "(1)-compressed tarball named after the short name of the package."
+The backup follows the same format as a binary package tarball, so it can be
+.RB "restored using " pkgadd (8).
+.RE
+
+.BR -p ", " --purge
+.RS
+Force removal of configuration files and variable data.  Normally, without this
+.RB "option, " pkgrm " leaves files installed in
+.IR /etc " and " /var " alone.  See the BUGS section, however, on why this
+still might not remove all files.
 .RE
 
 .BR -h ", " -? ", " --help
@@ -83,15 +99,17 @@ Treat all remaining arguments as packages.
 The global prometheus configuration file.
 .RE
 
+.I "~prometheus/installed/profiles/*
+.br
+.I "~prometheus/insatlled/indices/*
+.RS
+Prometheus' meta data about installed packages.
+.RE
+
 .SH BUGS
 
-- Although a backup to a tarball will save the package proper,
-.BR prometheus' " state information will be lost, ie. if you restore the"
-backup,
-.BR prometheus " will not know about the package's version.  The"
-.BR install-log "(1) log file will not be restored, either."
-
-- There is no way to restore a backup except to do it by hand.
+- Only files created at install time will be deleted (or backed up, for that
+matter).  Any files created subsequently have to be removed manually.
 
 If you think you have found a bug or encounter any weird behaviour, please
 report it to the address below.
@@ -103,7 +121,6 @@ report it to the address below.
 .SH SEE ALSO
 
 .BR bzip2 (1),
-.BR install-log (1),
 .BR pkgadd (8),
 .BR pkgbuild (1),
 .BR pkgcheck (1),
@@ -111,4 +128,5 @@ report it to the address below.
 .BR pkginfo (1),
 .BR pkginstall (8),
 .BR pkgunpack (1),
-.BR prometheus.conf (5)
+.BR prometheus.conf (5),
+.BR rerootd (1)
